# ai-debate

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  roundtable.html
backend/: Dockerfile  config.example.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  data_clerk.py  moderator.py  perspective.py  scorer.py
backend/app/agents/prompts/: data_clerk.md  moderator.md  perspective.md  scorer.md
backend/app/models/: __init__.py  schemas.py  session.py
backend/app/routers/: session.py  sse.py
backend/app/services/: llm.py  orchestrator.py  search.py  statmuse.py
backend/app/storage/: __init__.py  database.py  repository.py
backend/docs/: ARCHITECTURE_FLOW.md
backend/tests/: test_data_clerk.py  test_data_clerk_new.py  test_debater_state.py  test_orchestrator.py  test_repository.py  test_rethink_workflow.py  test_session_api.py  test_sse.py  test_statmuse.py
docs/: data-clerk-flowchart.md
frontend/: CEO-PLAN-2.5D-Pixel-Debate.md  Dockerfile  ENG-PLAN-2.5D-Pixel-Debate.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-jrpg/: index.html  package-lock.json  package.json  vite.config.ts
frontend-jrpg/src/: App.tsx
frontend-jrpg/src/components/: CitationText.tsx  JRPGDialogue.tsx  ReviewMode.tsx
frontend-jrpg/src/hooks/: useSSE.ts  useTypewriter.ts
frontend-jrpg/src/lib/: api.ts
frontend-jrpg/src/pages/: Discussion.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatStream.tsx  DataPoolPanel.tsx  ScorePanel.tsx  (+1 more)
(+19 files in other folders)
